--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //MP Chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
