--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".ClienteActivity"
             android:exported="false" />
         <activity
-            android:name=".EstoqueActivity"
+            android:name=".EstoqueFragment"
             android:exported="false" />
         <activity
             android:name=".CadastroActivity"
