--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,12 @@ buildscript {
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
     }
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://plugins.gradle.org/m2/' }
+    }
 }
 plugins {
     id 'com.android.application' version '7.4.2' apply false
