--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ android {
 
 dependencies {
 
+    implementation('com.google.code.gson:gson:2.8.7')
+    implementation('com.squareup.retrofit2:retrofit:2.9.0')
+    implementation('com.squareup.retrofit2:adapter-rxjava:2.9.0')
+    implementation('com.squareup.retrofit2:converter-gson:2.9.0')
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
     implementation 'androidx.core:core-ktx:1.10.0'
